--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>This is my first webpage.</h1>
-    <img src="mouseart.png" height="400px">
+    <h1>Art by Swakhyar Saurav Das.</h1>
+    <img src="mouseart.png" >
 
     
 </body>
