--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Art by Swakhyar Saurav Das.</h1>
-    <img src="mouseart.png" >
+    <div id="box1">
+        <h1>Art by Swakhyar Saurav Das.</h1> 
+    </div>
+    
+    <div id="box2">
+        <img src="mouseart.png" >
+    </div>
+
 
     
 </body>
