--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>website</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div id="box1">
-        <h1>Art by Swakhyar Saurav Das.</h1> 
+      <h1>Art by Swakhyar Saurav Das.</h1>
     </div>
-    
+
     <div id="box2">
-        <img src="mouseart.png" >
+      <img src="d313825cf439fd8c42e5239d4047f3d0.jpg" />
     </div>
-    
-</body>
+  </body>
 </html>
