--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
 
     <div id="box2">
-      <img src="d313825cf439fd8c42e5239d4047f3d0.jpg" />
+      <img src="my insta id.png" />
     </div>
   </body>
 </html>
