--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="box1">
-      <h1>Art by Swakhyar Saurav Das.</h1>
-    </div>
-
     <div id="box2">
       <img src="d313825cf439fd8c42e5239d4047f3d0.jpg" />
+    </div>
+
+    <div id="box1">
+      <h1>Swakhyar Saurav Das.</h1>
     </div>
   </body>
 </html>
